Innovations:
 Set of new drops to Fenrir, designed and created by ChatGPT :D
 Elementium mana and aura rings now can spawn a pixie
 Fenrir claws now got a chance (higher with full Fenrir set) to impose bleeding on hit
 Flugel music updated to remaster
 Flugel tier 3 as well as Thrym, Surtr and Fenrir now got own bossfight music
 Thrym and Surtr got sounds for their actions
 Beast Within and Bleeding potions are now not MMO-mode exclusive (configs updated)
 Little tuning for Corporea Sequencer and more informative wand HUD
 Alfheim->Midgard teleportation now can link to ranom exisiting portal (config)
 Increased nighttime spirits quantity in Alfheim (configurable)
 Visualization for entity elements when wearing monocle
 Removed Interdimensional Gateway Core infusion recipe
 [WIP] Entity-blocks
 
Fixes:
 Crash with EtFR
 Ragnarok crash with Aether Legacy
 WireAxe HRT abuse #259
 Floating bifrost flower flaws #266
 IguanaTweaksTConstruct support #271
 Bifrost petal block breaker #272
 Mushroom recipes
 Over- heat/cold weak hands effect
 Liquid mana placing
 Thrym, Surtr and Fenrir relic drops
 Purification and Smelt lenses behaviour and display