@@ -117,13 +117,14 @@ object AlfheimConfigHandler: ASJConfigHandler() {
 	var lightningsSpeed = 20
 	var longSeasons = true
 	var looniumOverseed = false
-	var mountAlfheimOnly = false
-	var mountCost = 1000
-	var mountLife = 600
+	var mobElements = arrayOf("Blaze:FIRE", "EnderDragon:ALIEN", "Enderman:ALIEN", "Ghast:AIR,PSYCHIC", "LavaSlime:FIRE", "MushroomCow:NATURE", "SnowMan:ICE", "Slime:NATURE,WATER", "VillagerGolem:EARTH", "WitherBoss:DARKNESS", "Thaumcraft.EldritchCrab:ALIEN,DARKNESS", "Thaumcraft.EldritchGolem:EARTH", "Thaumcraft.EldritchGuardian:ALIEN,DARKNESS,PSYCHIC", "Thaumcraft.EldritchWarden:ALIEN,DARKNESS,PSYCHIC", "Thaumcraft.Firebat:FIRE", "Thaumcraft.Golem:EARTH", "Thaumcraft.MindSpider:PSYCHIC", "Thaumcraft.ThaumSlime:WATER,DARKNESS", "Thaumcraft.Wisp:AIR", "ThermalFoundation.Blizz:ICE", "ThermalFoundation.Blitz:ELECTRIC", "ThermalFoundation.Basalz:ICE")
 	var minimalGraphics = false
 	var mobPriests = true
 	var moonbowMaxDmg = 20
 	var moonbowVelocity = 0.5f
+	var mountAlfheimOnly = false
+	var mountCost = 1000
+	var mountLife = 600
 	var multibaubleBlacklist = emptyArray<String>()
 	var multibaubleCount = 6
 	var notifications = true
@@ -298,6 +299,7 @@ object AlfheimConfigHandler: ASJConfigHandler() {
 		longSeasons = loadProp(CATEGORY_GENERAL, "longSeasons", longSeasons, true, "Set this to false to make seasons last 1 real day instead of 3")
 		looniumOverseed = loadProp(CATEGORY_GENERAL, "looniumOverseed", looniumOverseed, true, "Set this to true to make loonium spawn overgrowth seeds (for servers with limited dungeons so all players can craft Gaia pylons)")
 		minimalGraphics = loadProp(CATEGORY_GENERAL, "minimalGraphics", minimalGraphics, true, "Set this to true to disable .obj models and shaders")
+		mobElements = loadProp(CATEGORY_GENERAL, "mobElements", mobElements, true, "Array of mob names to the list of their elements", false)
 		mobPriests = loadProp(CATEGORY_GENERAL, "mobPriests", mobPriests, false, "Set this to false so that only players can be priests")
 		moonbowMaxDmg = loadProp(CATEGORY_GENERAL, "moonbowMaxDmg", moonbowMaxDmg, false, "Max base damage for Phoebus Catastrophe")
 		moonbowVelocity = loadProp(CATEGORY_GENERAL, "moonbowVelocity", moonbowVelocity.D, false, "Phoebus Catastrophe charge speed").F
