@@ -3,9 +3,10 @@
 package alfheim.common.core.helper
 
 import alexsocol.asjlib.*
-import alexsocol.asjlib.render.ASJRenderHelper
-import alfheim.api.ModInfo
 import alfheim.api.entity.*
+import alfheim.api.lib.LibResourceLocations
+import alfheim.common.core.handler.AlfheimConfigHandler
+import alfheim.common.core.handler.SheerColdHandler.cold
 import alfheim.common.core.helper.ElementalDamage.*
 import alfheim.common.core.helper.ElementalDamageBridge.*
 import cpw.mods.fml.common.eventhandler.*
@@ -35,35 +36,30 @@ object ElementalDamageHandler {
 		DamageSource.fallingBlock.setTo(EARTH)
 	}
 	
-	private val elementalMobs: Map<String, EnumSet<ElementalDamage>> get() = mapOf(
-		"Blaze" to EnumSet.of(FIRE),
-		"EnderDragon" to EnumSet.of(ALIEN),
-		"Enderman" to EnumSet.of(ALIEN),
-		"Ghast" to EnumSet.of(AIR, PSYCHIC),
-		"LavaSlime" to EnumSet.of(FIRE),
-		"MushroomCow" to EnumSet.of(NATURE),
-		"SnowMan" to EnumSet.of(ICE),
-		"Slime" to EnumSet.of(NATURE, WATER),
-		"VillagerGolem" to EnumSet.of(EARTH),
-		"WitherBoss" to EnumSet.of(DARKNESS),
-		"Thaumcraft.EldritchGolem" to EnumSet.of(EARTH),
-		"Thaumcraft.EldritchGuardian" to EnumSet.of(ALIEN, DARKNESS, PSYCHIC),
-		"Thaumcraft.EldritchWarden" to EnumSet.of(ALIEN, DARKNESS, PSYCHIC),
-		"Thaumcraft.Firebat" to EnumSet.of(FIRE),
-		"Thaumcraft.Golem" to EnumSet.of(EARTH),
-		"Thaumcraft.MindSpider" to EnumSet.of(PSYCHIC),
-		"Thaumcraft.ThaumSlime" to EnumSet.of(WATER, DARKNESS),
-		"Thaumcraft.Wisp" to EnumSet.of(AIR),
-		"ThermalFoundation.Blizz" to EnumSet.of(ICE),
-		"ThermalFoundation.Blitz" to EnumSet.of(ELECTRIC),
-		"ThermalFoundation.Basalz" to EnumSet.of(ICE),
-	)
+	private val elementalMobs: Map<String, EnumSet<ElementalDamage>> by lazy {
+		AlfheimConfigHandler.mobElements.associate { entry ->
+			val (name, eList) = entry.split(":")
+			val elements = eList.split(",").mapTo(EnumSet.noneOf(ElementalDamage::class.java), ElementalDamage::valueOf)
+			name to elements
+		}
+	}
 	
 	val EntityLivingBase.elements: EnumSet<ElementalDamage>
 		get() {
 			if (this is IElementalEntity) return elements
 			
 			return elementalMobs[EntityList.getEntityString(this)] ?: EnumSet.of(COMMON)
+		}
+	
+	val EntityLivingBase.appliedElements: EnumSet<ElementalDamage>
+		get() {
+			val set = EnumSet.noneOf(ElementalDamage::class.java)
+			
+			if (isBurning) set.add(FIRE)
+			if (isWet) set.add(WATER)
+			if (cold > 50) set.add(ICE)
+			
+			return set
 		}
 	
 	@SubscribeEvent(priority = EventPriority.HIGHEST)
@@ -81,25 +77,27 @@ object ElementalDamageHandler {
 		
 		if (targetEl.any { attackEl.any(it::isResistant) } ) e.ammount *= 0.5f
 		
-		if (e.entityLiving.isBurning) targetEl.add(FIRE)
-		if (e.entityLiving.isWet) targetEl.add(WATER)
-		
+		targetEl.addAll(e.entityLiving.appliedElements)
 		if (targetEl.any { attackEl.any(it::isVulnerable) } ) e.ammount *= 2f
 	}
 	
 	@SubscribeEvent
 	@SideOnly(Side.CLIENT)
 	fun drawStatusIcons(e: RenderLivingEvent.Specials.Post) {
+		if (mc.theWorld == null || mc.thePlayer == null) return // in-menu render
+		
 		if (!ItemMonocle.hasMonocle(mc.thePlayer)) return
 		
-		val elements = e.entity.elements.filter { it != COMMON }
+		val applied = e.entity.appliedElements
+		val elements = e.entity.elements.plus(applied).filter { it != COMMON }
 		if (elements.isEmpty()) return
 		
 		val size = max(e.entity.width.D * 8, 8.0)
 		
 		val f1 = 0.02666667f
 		glPushMatrix()
-		glTranslated(e.x, e.y + e.entity.height + 0.03125 * size, e.z)
+		glColor4f(1f, 1f, 1f, 1f)
+		glTranslated(e.x, e.y + e.entity.height + 0.5 + 0.03125 * size, e.z)
 		glNormal3f(0f, 1f, 0f)
 		glRotatef(-RenderManager.instance.playerViewY, 0f, 1f, 0f)
 		glRotatef(RenderManager.instance.playerViewX, 1f, 0f, 0f)
@@ -109,20 +107,29 @@ object ElementalDamageHandler {
 		OpenGlHelper.glBlendFunc(770, 771, 1, 0)
 		
 		glTranslatef(elements.size * size.F / -2, 0f, 0f)
-		val tes = Tessellator.instance
 		
-		for (element in elements) {
-			mc.renderEngine.bindTexture(ResourceLocation(ModInfo.MODID, "textures/misc/elements/${element.name}.png"))
-			ASJRenderHelper.glColor1u(ASJRenderHelper.addAlpha(element.color, 255))
+		mc.renderEngine.bindTexture(LibResourceLocations.elements)
+		
+		val debufSignPoses = mutableListOf<Double>()
+		val uOff = 1.0/11
+		
+		val tes = Tessellator.instance
+		tes.startDrawingQuads()
+		for ((id, element) in elements.withIndex()) {
+			val x = id * size
+			val u = (element.ordinal - 1) * uOff
 			
-			tes.startDrawingQuads()
-			tes.addVertexWithUV( 0.0,  0.0, 0.0, 0.0, 0.0)
-			tes.addVertexWithUV( 0.0, size, 0.0, 0.0, 1.0)
-			tes.addVertexWithUV(size, size, 0.0, 1.0, 1.0)
-			tes.addVertexWithUV(size,  0.0, 0.0, 1.0, 0.0)
-			tes.draw()
+			tes.addVertexWithUV(x       ,  0.0, 0.0, u       , 0.0)
+			tes.addVertexWithUV(x       , size, 0.0, u       , 1.0)
+			tes.addVertexWithUV(x + size, size, 0.0, u + uOff, 1.0)
+			tes.addVertexWithUV(x + size,  0.0, 0.0, u + uOff, 0.0)
 			
-			glTranslatef(size.F, 0f, 0f)
+			if (element in applied) debufSignPoses.add(x)
+		}
+		tes.draw()
+		
+		debufSignPoses.forEach { x ->
+			mc.fontRenderer.drawString("-", x.I, (size / 2).I, 0x8B0000)
 		}
 		
 		glEnable(GL_LIGHTING)
@@ -137,19 +144,19 @@ private enum class ElementalDamageBridge {
 	val real get() = ElementalDamage.values()[ordinal]
 }
 
-enum class ElementalDamage(private val x2: Array<ElementalDamageBridge>, private val x05: Array<ElementalDamageBridge>, val color: Int) {
-	COMMON(arrayOf(), arrayOf(), 0xFFFFFF),
-	FIRE(arrayOf(WATER_, EARTH_), arrayOf(NATURE_, ICE_), 0xFF5A01),
-	WATER(arrayOf(ELECTRIC_, NATURE_), arrayOf(FIRE_, ICE_), 0x3CD4FC),
-	AIR(arrayOf(ELECTRIC_, ICE_), arrayOf(EARTH_, NATURE_), 0xFFFF7E),
-	EARTH(arrayOf(WATER_, NATURE_), arrayOf(FIRE_, ELECTRIC_), 0x56C000),
-	ICE(arrayOf(FIRE_, ELECTRIC_), arrayOf(PSYCHIC_, NATURE_), 0xE1FFFF),
-	ELECTRIC(arrayOf(FIRE_, ICE_), arrayOf(NATURE_, AIR_), 0xAA00FF),
-	NATURE(arrayOf(FIRE_, ICE_), arrayOf(WATER_, EARTH_), 0x01AC00),
-	LIGHTNESS(arrayOf(DARKNESS_), arrayOf(PSYCHIC_), 0xDDDDDD),
-	DARKNESS(arrayOf(LIGHTNESS_), arrayOf(ALIEN_), 0x222222),
-	PSYCHIC(arrayOf(LIGHTNESS_, DARKNESS_), arrayOf(COMMON_), 0xFFC2B3),
-	ALIEN(arrayOf(LIGHTNESS_), arrayOf(DARKNESS_), 0x805080);
+enum class ElementalDamage(private val x2: Array<ElementalDamageBridge>, private val x05: Array<ElementalDamageBridge>) {
+	COMMON(arrayOf(), arrayOf()),
+	FIRE(arrayOf(WATER_, EARTH_), arrayOf(AIR_, NATURE_)),
+	WATER(arrayOf(ICE_, ELECTRIC_), arrayOf(FIRE_, NATURE_)),
+	AIR(arrayOf(FIRE_, ICE_), arrayOf(WATER_, EARTH_)),
+	EARTH(arrayOf(WATER_, NATURE_), arrayOf(ICE_, ELECTRIC_)),
+	ICE(arrayOf(FIRE_, ELECTRIC_), arrayOf(WATER_, NATURE_)),
+	ELECTRIC(arrayOf(FIRE_, ICE_), arrayOf(WATER_, AIR_)),
+	NATURE(arrayOf(FIRE_, ICE_), arrayOf(WATER_, ELECTRIC_)),
+	LIGHTNESS(arrayOf(DARKNESS_), arrayOf(PSYCHIC_)),
+	DARKNESS(arrayOf(LIGHTNESS_), arrayOf(ALIEN_)),
+	PSYCHIC(arrayOf(ALIEN_), arrayOf(LIGHTNESS_)),
+	ALIEN(arrayOf(PSYCHIC_), arrayOf(DARKNESS_));
 	
 	fun isVulnerable(type: ElementalDamage): Boolean {
 		return ElementalDamageBridge.values()[type.ordinal] in x2
