@@ -17,7 +17,7 @@ import alfheim.common.entity.boss.EntityFlugel.Companion.stopRecord
 import alfheim.common.entity.boss.ai.fenrir.*
 import alfheim.common.entity.boss.ai.fenrir.EntityAIFenrirLeapAtTarget.Companion.leapTo
 import alfheim.common.entity.spell.*
-import alfheim.common.item.AlfheimItems
+import alfheim.common.item.*
 import alfheim.common.item.material.ElvenResourcesMetas
 import alfheim.common.world.dim.domains.gen.FenrirDomain
 import cpw.mods.fml.relauncher.*
@@ -397,8 +397,6 @@ class EntityFenrir(world: World): EntityCreature(world), IBotaniaBossWithName {
 	override fun dropFewItems(gotHit: Boolean, looting: Int) {
 		entityDropItem(ElvenResourcesMetas.FenrirFur.stack(rand.nextInt(looting * 2 + 2) + 3), 5f)
 		
-		val relics = arrayOf(AlfheimAchievements.gungnir to AlfheimItems.gungnir, AlfheimAchievements.gleipnir to AlfheimItems.gleipnir)
-		
 		val (x, y, z) = Vector3(source).mf()
 		getEntitiesWithinAABB(worldObj, EntityPlayer::class.java, FenrirDomain.boundBox.copy().offset(x, y, z)).shuffled().forEach { player ->
 			val data = relics.shuffled().firstOrNull { !player.hasAchievement(it.first) } ?: return@forEach
@@ -410,7 +408,7 @@ class EntityFenrir(world: World): EntityCreature(world), IBotaniaBossWithName {
 			return
 		}
 		
-		if (ASJUtilities.chance(5 + looting * 0.01)) entityDropItem(ItemStack(AlfheimItems.fenrirClaws), 0f)
+		if (ASJUtilities.chance(5 + looting * 0.01)) entityDropItem(lightRelics.random().copy(), 0f)
 	}
 	
 	override fun isAIEnabled() = true
@@ -503,6 +501,9 @@ class EntityFenrir(world: World): EntityCreature(world), IBotaniaBossWithName {
 		
 		const val TAG_SOURCE = "source"
 		const val TAG_STAGE = "stage"
+		
+		val relics = arrayOf(AlfheimAchievements.gungnir to AlfheimItems.gungnir, AlfheimAchievements.gleipnir to AlfheimItems.gleipnir)
+		val lightRelics = arrayOf(ItemStack(AlfheimItems.fenrirClaws), *ItemFenrirLoot.FenrirLootMetas.values().map(ItemFenrirLoot.FenrirLootMetas::stack).toTypedArray())
 		
 		var barRect: Rectangle? = null
 		var hpBarRect: Rectangle? = null
